--- a/aws/PAS-AIO-template.yaml
+++ b/aws/PAS-AIO-template.yaml
@@ -4,6 +4,24 @@ Resources:
     Properties:
       RetentionInDays: 30
     DeletionPolicy: Retain
+  VaultCfnInitLogStream:
+    Type: AWS::Logs::LogStream
+    Properties: 
+      LogGroupName: !Sub '${LogGroup}'
+      LogStreamName: 'VaultMachine/CfnInitLog'
+    DeletionPolicy: Retain
+  VaultInitLogStream:
+    Type: AWS::Logs::LogStream
+    Properties: 
+      LogGroupName: !Sub '${LogGroup}'
+      LogStreamName: 'VaultMachine/VaultInitLog'
+    DeletionPolicy: Retain
+  VaultPostInstallLogStream:
+    Type: AWS::Logs::LogStream
+    Properties: 
+      LogGroupName: !Sub '${LogGroup}'
+      LogStreamName: 'VaultMachine/VaultPostInstallLog'
+    DeletionPolicy: Retain
   DeployBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -310,21 +328,42 @@ Resources:
                 files:
                   - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
-            '01-restartSSM':
-              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: '30'
+            1-downloadLatestSSM:
+              command: >
+                powershell.exe -Command [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe" -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe" -UseBasicParsing
+              waitAfterCompletion: '0'
               ignoreErrors: 'true'
-            '02-deploy':
-              command: C:\Python27\python.exe C:\deploy.py
+            2-updateLatestSSM:
+              command: >
+                powershell.exe -Command Start-Process -FilePath $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S" -Wait
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            '03-CheckVaultServiceStatus':
-              command: powershell.exe -Command " if ((Get-Service 'PrivateArk Server').Status
-                -eq 'Running') {exit 0} else {exit 1} "
+              ignoreErrors: 'true'
+            3-removeLatestSSM:
+              command: >
+                powershell.exe -Command rm -Force $env:USERPROFILE\Desktop\SSMAgent_latest.exe
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            99-SignalCompletion:
-              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource VaultMachine --region ${AWS::Region}'
+              ignoreErrors: 'true'
+            4-configcw:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${VaultCfnInitLogStream} -VaultInitLogStream ${VaultInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -Region ${AWS::Region}
+              waitAfterCompletion: '10'
+            5-restartSSM:
+              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
+              waitAfterCompletion: '60'
+        configServices:
+          commands:
+            1-download:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
+              waitAfterCompletion: '0'
+            2-postInstall:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region}
+              waitAfterCompletion: '0'
+            3-removePermissions:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole}
+              waitAfterCompletion: '0'
     CreationPolicy:
       ResourceSignal:
         Timeout: PT15M
@@ -466,7 +505,7 @@ Resources:
             Action:
               - s3:GetObject
               - s3:GetObjectVersion
-            Resource: !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket$}/*'
+            Resource: !Sub 'arn:${AWS::Partition}:s3:::${VaultFilesBucket}/*'
       Roles:
         - !Ref 'VaultInstancesRole'
     Condition: EULACondition
@@ -507,135 +546,138 @@ Resources:
     Metadata:
       AWS::CloudFormation::Init:
         config:
-          files:
-            C:\Set-LocalAccountPassword.ps1:
-              content: !Join
-                - ''
-                - - "[CmdletBinding()]\n"
-                  - "Param(\n"
-                  - "  [Parameter(Mandatory=$true)][string]$Username,\n"
-                  - "  [Parameter(Mandatory=$true)][string]$Password\n"
-                  - ")\n"
-                  - "$adsi = [ADSI]\"WinNT://$env:COMPUTERNAME\"\n"
-                  - "$existing = $adsi.Children | where {$_.SchemaClassName -eq 'user'\
-                    \ -and $_.Name -eq $Username }\n"
-                  - "if ($existing -eq $null) {\n"
-                  - "    Write-Error \"User $Username does not exist\"\n"
-                  - "    return\n"
-                  - "}\n"
-                  - $existing.SetPassword($Password)
-            C:\Set-ServiceLogon.ps1:
-              content: !Join
-                - ''
-                - - "[CmdletBinding()]\n"
-                  - "Param(\n"
-                  - "  [Parameter(Mandatory=$true)][string]$Service,\n"
-                  - "  [Parameter(Mandatory=$true)][string]$Password\n"
-                  - ")\n"
-                  - "$filter = 'Name=' + \"'\" + $Service + \"'\" + ''\n"
-                  - "$s = Get-WMIObject -class Win32_Service -Filter $filter\n"
-                  - "$s.Change($Null,$Null,$Null,$Null,$Null,$Null,$Null,$Password,$Null,$Null,$Null)\n"
-          services:
             windows:
               AmazonSSMAgent:
                 enabled: 'true'
                 ensureRunning: 'true'
                 files:
                   - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
-          commands:
-            '01-restartSSM':
+        commands:
+            01-restartSSM:
               command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
               waitAfterCompletion: '30'
               ignoreErrors: 'true'
-            '02-PVWAdeploy':
+            02-PVWAdeploy:
               command: C:\Python27\python.exe C:\deployPVWA.py
               waitAfterCompletion: '0'
               ignoreErrors: 'false'
-            '03-StartAppPool':
+            03-StartAppPool:
               command: >-
                 powershell -command "& {&'Import-Module' WebAdministration}"; "& {&'Start-WebAppPool'
                 -Name PasswordVaultWebAccessPool}"; "& {&'Set-ItemProperty' -Path
                 IIS:\AppPools\PasswordVaultWebAccessPool -Name autoStart -Value 'true'}"
               waitAfterCompletion: '0'
               ignoreErrors: 'false'
-            '04-configurePVWAUser':
-              command: !Join
-                - ''
-                - - powershell.exe -File C:\Set-LocalAccountPassword.ps1 -Username
-                    "PVWAReportsUser" -Password "
-                  - !GetAtt 'ComponentSecretString.RandomString'
-                  - '"'
+            04-configurePVWAUser:
+              command:
+                - powershell.exe -Command -File C:\Set-LocalAccountPassword.ps1 -Username "PVWAReportsUser" -Password !GetAtt 'ComponentSecretString.RandomString'
               waitAfterCompletion: '0'
               ignoreErrors: 'false'
-            '05-configurePVWAService':
-              command: !Join
-                - ''
-                - - powershell.exe -File C:\Set-ServiceLogon.ps1 -Service "CyberArk
-                    Scheduled Tasks" -Password "
-                  - !GetAtt 'ComponentSecretString.RandomString'
-                  - '"'
+            101-configurePVWAService:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
+                -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            '06-ScheduledTasksServiceConfig':
+            102-configuration:
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858 -HostName ${InputHostname}
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP}'
+                  InputHostname: !If 
+                    - PVWAHostNameEmpty
+                    - empty
+                    - !Sub '${PVWAHostName}'
+              waitAfterCompletion: '0'
+            103-registration:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\PVWARegistration.ps1
+                -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
+                ${StoreAdminPassword.SsmId}
+              waitAfterCompletion: '0'
+            104-startAppPool:
+              command: >-
+                powershell -Command "& {&'Import-Module' WebAdministration}"; "&
+                {&'Start-WebAppPool' -Name PasswordVaultWebAccessPool}"; "&
+                {&'Set-ItemProperty' -Path
+                IIS:\AppPools\PasswordVaultWebAccessPool -Name autoStart -Value
+                'true'}"
+              waitAfterCompletion: '0'
+            105-CSTserviceConfig:
               command: sc config "CyberArk Scheduled Tasks" start=auto
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            '08-CPMdeploy':
-              command: C:\Python27\python.exe C:\deployCPM.py
+            200-configureCPMService:
+              command: 
+                - powershell.exe -File C:\Set-LocalService.ps1 -Services "CyberArk Scheduled Tasks" -UserName 
               waitAfterCompletion: '0'
               ignoreErrors: 'false'
-            '09-configureCPMUser':
-              command: !Join
-                - ''
-                - - powershell.exe -File C:\Set-LocalAccountPassword.ps1 -Username
-                    "PasswordManagerUser" -Password "
-                  - !GetAtt 'ComponentSecretString.RandomString'
-                  - '"'
+            201-configuration:
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\CPMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP}'
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            10-configureCPMService:
-              command: !Join
-                - ''
-                - - powershell.exe -File C:\Set-ServiceLogon.ps1 -Service "CyberArk
-                    Password Manager" -Password "
-                  - !GetAtt 'ComponentSecretString.RandomString'
-                  - '"'
+            202-registration:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\CPMRegistration.ps1
+                -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
+                ${StoreAdminPassword.SsmId}
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            11-configureCPMScannerService:
-              command: !Join
-                - ''
-                - - powershell.exe -File C:\Set-ServiceLogon.ps1 -Service "CyberArk
-                    Central Policy Manager Scanner" -Password "
-                  - !GetAtt 'ComponentSecretString.RandomString'
-                  - '"'
+            203-configureCPMService:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
+                -Username "PasswordManagerUser" -Services "CyberArk Central
+                Policy Manager Scanner"
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            12-CPMServiceConfig:
+            204-configureCPMService:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1
+                -Username "PasswordManagerUser" -Services "CyberArk Password
+                Manager"
+              waitAfterCompletion: '0'
+            205-CPMserviceConfig:
               command: sc config "CyberArk Password Manager" start=auto
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            13-CPMScannerServiceConfig:
+            206-CPMSserviceConfig:
               command: sc config "CyberArk Central Policy Manager Scanner" start=auto
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            16-PSMdeploy:
-              command: C:\Python27\python.exe C:\deployPSM.py
+            301-configuration:
+              command: !Sub 
+                - >-
+                  powershell.exe -File
+                  C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
+                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+                  1858
+                - VaultIpAddress: !If 
+                    - DRValueEmpty
+                    - !Sub '${VaultPrivateIP}'
+                    - !Sub '${VaultPrivateIP}'
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            17-PSMServiceConfig:
+            302-registration:
+              command: !Sub >
+                powershell.exe -File C:\CyberArk\Deployment\PSMRegistration.ps1
+                -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
+                ${StoreAdminPassword.SsmId}
+              waitAfterCompletion: '0'
+            303-PSMserviceConfig:
               command: sc config "Cyber-Ark Privileged Session Manager" start=auto
               waitAfterCompletion: '0'
-              ignoreErrors: 'false'
-            99-SignalCompletion:
-              command: !Join
-                - ''
-                - - 'cfn-signal.exe -e %ERRORLEVEL% '
-                  - '         --stack '
-                  - !Ref 'AWS::StackId'
-                  - '         --resource ComponentsMachine '
-                  - '         --region '
-                  - !Ref 'AWS::Region'
+            98-SignalCompletion:
+              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
+            99-restart:
+              command: powershell.exe -Command "Restart-Computer -Force"
+              waitAfterCompletion: forever  
     CreationPolicy:
       ResourceSignal:
         Timeout: PT20M
